$Id$
            
            [- Version 2.1.18 -]
2006-06-11: Corrected bug in Or-chunk/derive-date: If current date is
            newer than earliest disjunct, stick with current date.
            setter.lisp: In 'simple-dat-match', any quoted expression
            should return value 0, because it can contain no free
            occurrences of | dat|.

            [- Version 2.1.17 2006/05/30 13:54:47 airfoyle Exp -]
2006-05-30: Defined 'with-gen-vars', around cool new convention that
            generated-variable names in macros are of the form -x-.
            In debug.lisp: 'g' and all other dbg-stack* searchers now
            pull the entries they find to the front, so that 'ps' is
            less likely to flush something useful.

            [- Version 2.1.16 2006/05/25 20:01:19 airfoyle Exp -]
2006-05-25: Changed query message in 'fload-versions'.  Hopefully
            more accurate.

            [- Version 2.1.15 2006/05/25 14:17:12 airfoyle Exp -]
2006-05-25: Added code to ensure that (depends-on (:at :read-time)
            ...) is effective; that is, that the file will be
            slurped for macros if else.  Also altered 'f-l-c-chunk' to
            return multiple values instead of a list.

            [- Version 2.1.14 2006/05/23 21:37:10 airfoyle Exp -]
2006-05-23: Fixed bug in definition of 'setter' (setter.lisp), and
            reversed order of args to setter (and hence to
            ^-this-val and <-this-val).

            [- Version 2.1.12 2006/05/22 12:08:37 airfoyle Exp -]
2006-05-21  Introduced 'matches' = 'matchq' with args reversed

            [- Version 2.1.9c 2006/05/20 01:44:24 airfoyle Exp -]
2006-05-18  Created ytcopy.lisp: Utilities for creating tar files and copying
            to cyndra.  (Yes, the name of the server is hard-wired.
            Sigh.) 

            [- Version 2.1.9b -] -- sourceforge CVS site down
2006-05-16  Streamlined "start over" hack in ytload, dispensing with