@@ -661,6 +661,7 @@
 			      (dolist (d all-derivees)
 				 (cond ((chunk-has-no-managed-derivees d)
 					(chunk-unmanage d))))
+                              (chunk-unmanage c)
 			      (cond ((Chunk-managed c)
 				     (cerror !"I'll proceed with chunk in ~
                                                unexpected state"
@@ -732,17 +733,6 @@
 	        ;; to true, but not if an interrupt occurred --
 		(progn
 		    (setf (Chunk-managed chunk) (reason-to-manage chunk))
-;;; What was I thinking when I wrote this?
-;;;;			  (and (every #'Chunk-managed
-;;;;				      (Chunk-basis chunk))
-;;;;			       (or (not its-an-or)
-;;;;				   (some #'Chunk-managed
-;;;;					 (Or-chunk-disjuncts chunk)))))
-;;;;		    (format t "chunk-managed? ~s : ~s~%"
-;;;;			    chunk (Chunk-managed chunk))
-;;;;		    (cond ((not (Chunk-managed chunk))
-;;;;			   (setq ch* chunk)
-;;;;			   (break "Bogosity for ~s" ch*)))
 		 ))
 	     (Chunk-managed chunk)))))
 
