@@ -21,7 +21,7 @@
 (eval-when (:compile-toplevel :load-toplevel)
    (export '(!= !=/ *-* switch matchq matches match-cond match-let *unbound
 	     make-Qvaroid make-Qvar is-Qvar is-Qvaroid Qvar-sym Qvar-notes Qvar
-             setter <-this-val ^-this-val)))
+             setter <-this-val ^-this-val retrieve-val)))
 
 ;;;;(declaim (special *-*))
 
@@ -658,3 +658,4 @@
 (defvar ^-this-val (\\ (_ new-val) new-val))
 (defvar <-this-val ^-this-val)
 ;;; E.g., (funcall set-whatever (first l323) <-this-val)
+(defvar retrieve-val (\\ (old-val _) old-val))
