@@ -1,6 +1,13 @@
 $Id$
             
-            [- Version 2.1.18 -]
+            [- Version 2.1.20 -]
+2006-06-28: util.lisp: Corrected 'format' calls that lacked control
+            strings.
+            chunk.lisp: 'chunk-internal-term-mgt' didn't actually call
+            'unmanage' in the case where the chunk had derivees (!).
+            How did this ever work?  I fixed it.
+
+            [- Version 2.1.19 2006/06/26 20:06:48 airfoyle Exp -]
 2006-06-11: Corrected bug in Or-chunk/derive-date: If current date is
             newer than earliest disjunct, stick with current date.
             setter.lisp: In 'simple-dat-match', any quoted expression
